--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>hola mundo de git desde vscode</h1>
+    <main id="principal">
+        <p class="negrita">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, rerum tempore quae voluptate, qui, est esse aperiam officia natus voluptatem maxime eligendi magnam maiores harum vel dignissimos dolorem sunt! Dolorem?</p>
+    </main>
     <script src="js/app.js"></script>
 </body>
 </html>
